--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.12",
-		"react-native": "0.47.1"
+		"axios": "^0.16.2",
+		"react": "^16.0.0-beta.5",
+		"react-native": "^0.47.1"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
